# Buh

./: .gitignore  CMakeLists.txt  README.md  cmake.sh
include/adt/: Map.hh  String.hh  String.inc
libs/adt/: BufferAllocator.hh  Pair.hh  Span2D.hh  ThreadPool.hh  math.hh
protocols/: dwl-ipc-unstable-v2.xml  wlr-layer-shell-unstable-v1.xml
src/: BMP.hh  ColorScheme.hh  Image.cc  Image.hh  Tag.hh  app.cc  app.hh  battery.cc  battery.hh  config.hh  configDefault.hh  exec.cc  exec.hh  frame.cc  frame.hh  main.cc
src/PipeWire/: PipeWire.cc  PipeWire.hh
src/ttf/: Font.cc  Font.hh  Parser.cc  Parser.hh  Rasterizer.cc  Rasterizer.hh  types.hh
src/wayland/: Client.cc  Client.hh  ClientBarOutput.cc  ClientInput.cc  shm.hh
src/wl/: Client.cc  Client.hh  ClientBarOutput.cc  ClientInput.cc  shm.hh
